force-app/main/default/objects/Position__c.object
<CustomObject>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <label>Date Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Opened__c</fullName>
        <label>Date Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_Opened__c</fullName>
        <formula>IF(ISPICKVAL(Status__c, &quot;Open&quot;) , 

NOW() - Date_Opened__c, Date_Closed__c - Date_Opened__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Opened</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hiring Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <label>Job Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Position_Number__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Position Number</label>
        <length>7</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>San Francisco, CA</fullName>
                </value>
                <value>
                    <fullName>New York, NY</fullName>
                </value>
                <value>
                    <fullName>Atlanta, GA</fullName>
                </value>
                <value>
                    <fullName>London, UK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Pay__c</fullName>
        <label>Max Pay</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Pay__c</fullName>
        <label>Min Pay</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Operating_Systems__c</fullName>
        <inlineHelpText>Does this position require any working knowledge of operating systems?</inlineHelpText>
        <label>Operating Systems</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Windows</fullName>
                </value>
                <value>
                    <fullName>Unix</fullName>
                </value>
                <value>
                    <fullName>Mac</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pay_Grade__c</fullName>
        <label>Pay Grade</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Department__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ACT-100</fullName>
                </value>
                <value>
                    <fullName>ACT-200</fullName>
                </value>
                <value>
                    <fullName>ACT-300</fullName>
                </value>
                <value>
                    <fullName>ACT-400</fullName>
                </value>
                <value>
                    <fullName>ENG-100</fullName>
                </value>
                <value>
                    <fullName>ENG-200</fullName>
                </value>
                <value>
                    <fullName>ENG-300</fullName>
                </value>
                <value>
                    <fullName>ENG-400</fullName>
                </value>
                <value>
                    <fullName>IT-100</fullName>
                </value>
                <value>
                    <fullName>IT-200</fullName>
                </value>
                <value>
                    <fullName>IT-300</fullName>
                </value>
                <value>
                    <fullName>IT-400</fullName>
                </value>
                <value>
                    <fullName>C-100</fullName>
                </value>
                <value>
                    <fullName>C-200</fullName>
                </value>
                <value>
                    <fullName>C-300</fullName>
                </value>
                <value>
                    <fullName>C-400</fullName>
                </value>
                <value>
                    <fullName>S-100</fullName>
                </value>
                <value>
                    <fullName>S-200</fullName>
                </value>
                <value>
                    <fullName>S-300</fullName>
                </value>
                <value>
                    <fullName>S-400</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Position Approver #1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Positions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Position_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Position Approver #2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Positions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Position_Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Position Approver #3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Positions3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Programming_Languages__c</fullName>
        <label>Programming Languages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>.Net</fullName>
                </value>
                <value>
                    <fullName>CSS</fullName>
                </value>
                <value>
                    <fullName>HTML5</fullName>
                </value>
                <value>
                    <fullName>Java</fullName>
                </value>
                <value>
                    <fullName>JavaScript</fullName>
                </value>
                <value>
                    <fullName>Perl</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>Python</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Responsibilities__c</fullName>
        <label>Responsibilities</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Skills_Required__c</fullName>
        <label>Skills Required</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <label>Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>Filled</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time</fullName>
                </value>
                <value>
                    <fullName>Part Time</fullName>
                </value>
                <value>
                    <fullName>Temp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Position</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Hiring_Manager__c</columns>
        <columns>Location__c</columns>
        <columns>Pay_Grade__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <recordTypes>
        <fullName>Non_Technical_Position</fullName>
        <active>true</active>
        <description>This record type should be used for positions with a department of Finance, Support or Sales.</description>
        <label>Non-Technical Position</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical_Position</fullName>
        <active>true</active>
        <description>This record type should be used for positions with a department of IT or Engineering.</description>
        <label>Technical Position</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <sharingReasons>
        <fullName>Hiring_Manager__c</fullName>
        <label>Hiring Manager</label>
    </sharingReasons>
</CustomObject>